force-app/main/default/objects/Field_Action_Notification__c/Field_Action_Notification__c.object-meta.xml
<CustomObject>
    <description>This object keeps track of Recalls, Tracking Escalations, and Notifications such as PQN, PCN, PON, etc.</description>
    <label>Field Action &amp; Notification</label>
    <nameField>
        <displayFormat>FAN-{0000}</displayFormat>
        <label>Field Action &amp; Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Actions &amp; Notifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>