force-app/main/default/objects/Field_Action_Notification__c/fields/Affected_Product__c.field-meta.xml
<CustomField>
    <fullName>Affected_Product__c</fullName>
    <description>To capture the products that are affected</description>
    <label>Affected Product</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>