force-app/main/default/objects/Field_Action_Notification__c/fields/Customer_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Customer_Messaging__c</fullName>
    <description>To capture the impact of escalation on customer or business.</description>
    <label>Customer Messaging</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>