force-app/main/default/objects/Field_Action_Notification__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <description>To capture the type of escalation.</description>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Array Consumables</fullName>
            </value>
            <value>
                <fullName>Sequencing Consumables</fullName>
            </value>
            <value>
                <fullName>Library Prep Consumables</fullName>
            </value>
            <value>
                <fullName>Instrumentation Hardware</fullName>
            </value>
            <value>
                <fullName>Control Software &amp; Networking</fullName>
            </value>
            <value>
                <fullName>Analysis Software</fullName>
            </value>
            <value>
                <fullName>Documentation &amp; Support Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>