force-app/main/default/objects/Field_Action_Notification__c/fields/Manufacture_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_End_Date__c</fullName>
    <description>To capture the end date of manufacture of installed product. It is used to set the criteria.</description>
    <label>Manufacture End Date</label>
    <type>Date</type>
</CustomField>