force-app/main/default/objects/Field_Action_Notification__c/fields/Manufacture_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Start_Date__c</fullName>
    <description>To set the Start Date of Manufacture. It is used for setting the Criteria.</description>
    <label>Manufacture Start Date</label>
    <type>Date</type>
</CustomField>