force-app/main/default/objects/Field_Action_Notification__c/fields/Mitigations__c.field-meta.xml
<CustomField>
    <fullName>Mitigations__c</fullName>
    <description>To capture the customer messages.</description>
    <label>Mitigations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>