force-app/main/default/objects/Field_Action_Notification__c/fields/Original_Case__c.field-meta.xml
<CustomField>
    <fullName>Original_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the Original Case. Lookup to cases</description>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Field_Action_Notification1</relationshipName>
    <type>Lookup</type>
</CustomField>