force-app/main/default/objects/Field_Action_Notification__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Product related to the Recall Field Action.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Field Actions &amp; Notifications (Product)</relationshipLabel>
    <relationshipName>Field_Action_Notification</relationshipName>
    <type>Lookup</type>
</CustomField>