force-app/main/default/objects/Field_Action_Notification__c/fields/Requested_Information__c.field-meta.xml
<CustomField>
    <fullName>Requested_Information__c</fullName>
    <description>To capture the information.</description>
    <label>Requested Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>