force-app/main/default/objects/Field_Action_Notification__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <description>To capture the resolution date.</description>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>