force-app/main/default/objects/Field_Action_Notification__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>To define the severity of the escalation.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Customer - Low &amp; Business - Low</fullName>
            </value>
            <value>
                <fullName>Customer - Low &amp; Business - Medium</fullName>
            </value>
            <value>
                <fullName>Customer - Low &amp; Business - High</fullName>
            </value>
            <value>
                <fullName>Customer - Medium &amp; Business - Low</fullName>
            </value>
            <value>
                <fullName>Customer - Medium &amp; Business - Medium</fullName>
            </value>
            <value>
                <fullName>Customer - Medium &amp; Business - High</fullName>
            </value>
            <value>
                <fullName>Customer - High &amp; Business - Low</fullName>
            </value>
            <value>
                <fullName>Customer - High &amp; Business - Medium</fullName>
            </value>
            <value>
                <fullName>Customer - High &amp; Business - High</fullName>
            </value>
            <value>
                <fullName>To Be Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>