force-app/main/default/objects/Field_Action_Notification__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <description>To capture the software for criteria.</description>
    <label>Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>