force-app/main/default/objects/Field_Action_Notification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To capture the status of the escalation.</description>
    <inlineHelpText>The status of the Field Action &amp; Notification reflects if it is Open, Locked or Closed. Locked FANs are used for formal monitoring. For further information contact Product Support.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Monitoring - no investigation</fullName>
            </value>
            <value>
                <fullName>Investigation ongoing</fullName>
            </value>
            <value>
                <fullName>Investigation complete - monitoring</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Locked Assessment</fullName>
            </value>
            <value>
                <fullName>Locked Monitoring - no investigation</fullName>
            </value>
            <value>
                <fullName>Locked Investigation ongoing</fullName>
            </value>
            <value>
                <fullName>Locked Investigation complete - monitoring</fullName>
            </value>
            <value>
                <fullName>Locked Open</fullName>
            </value>
            <value>
                <fullName>Locked Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>