force-app/main/default/objects/Field_Action_Notification__c/fields/Suspected_Causes_Experiments_Done__c.field-meta.xml
<CustomField>
    <fullName>Suspected_Causes_Experiments_Done__c</fullName>
    <description>To capture the causes and the experiments conducted on escalations.</description>
    <label>Suspected Causes / Experiments Done</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>