force-app/main/default/objects/Field_Action_Notification__c/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <description>To capture the sympton of escalations.</description>
    <label>Symptom</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>