force-app/main/default/objects/Field_Action_Notification__c/fields/Work_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Description__c</fullName>
    <description>To store Work Order Description.</description>
    <label>Work Order Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>