force-app/main/default/objects/Field_Action_Notification__c/recordTypes/Notification.recordType-meta.xml
<RecordType>
    <fullName>Notification</fullName>
    <active>true</active>
    <label>Notification</label>
</RecordType>