force-app/main/default/objects/Field_Action_Notification__c/recordTypes/PQN_Recall.recordType-meta.xml
<RecordType>
    <fullName>PQN_Recall</fullName>
    <active>true</active>
    <label>PQN - Recall</label>
</RecordType>