force-app/main/default/objects/Field_Action_Notification__c/recordTypes/Tracking_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Tracking_Escalation</fullName>
    <active>true</active>
    <label>Tracking Escalation</label>
</RecordType>