force-app/main/default/objects/Field_Action_Notification__c/recordTypes/Upgrade_FSB.recordType-meta.xml
<RecordType>
    <fullName>Upgrade_FSB</fullName>
    <active>true</active>
    <label>Upgrade/FSB</label>
</RecordType>