force-app/main/default/objects/Field_Action_Notification__c/listViews/All_Tracking_Escalations.listView-meta.xml
<ListView>
    <fullName>All_Tracking_Escalations</fullName>
    <columns>NAME</columns>
    <columns>Escalation_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Field_Action_Notification__c.Tracking_Escalation</value>
    </filters>
    <label>All Tracking Escalations</label>
    <language>en_US</language>
</ListView>